--- a/templates/login.html
+++ b/templates/login.html
@@ -58,11 +58,9 @@
 	{% if message %}
         <div class="error-message">{{ message }}</div>
     {% endif %}
-    <form action="/login" method="post">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+    <form action="/login" method="post" enctype="multipart/form-data">
+        <label for="nft">Upload your nft:</label>
+        <input type="file" id="nft" name="nft" required>
         <input type="submit" value="Login">
     </form>
 </body>
