--- a/templates/register.html
+++ b/templates/register.html
@@ -43,6 +43,20 @@
             width: 100%;
             margin-top: 20px;
         }
+        input[type="button"] {
+            background-color: #fcfcf9;
+            color: black;
+            padding: 10px 20px;
+            border: 1px solid #4CAF50;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+            margin-top: 20px;
+        }
+        input[type="button"]:hover {
+            color: white;
+            background-color: #4CAF50;
+        }
         input[type="submit"]:hover {
             background-color: #45a049;
         }
@@ -50,6 +64,8 @@
 </head>
 <body>
     <form action="/register" method="post">
+        <p>After registering you will need to save your nft!</p>
+        <p>It might take a couple of minutes to register your nft to the blockchain, so you will not be able to login immediatlly</p>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name">
         <label for="email">Email:</label>
@@ -57,6 +73,8 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password">
         <input type="submit" value="Register">
+        <a href="/login"><input type="button" value="Go to login"></a>
     </form>
+    
 </body>
 </html>
